@@ -1,5 +1,11 @@
-v5_8_0 (2015-06-12) 
+VM : v5_8_1 (2015-08-11)
+Adding bin/speclog_svn_update.sh : script called by the cronjob to auto update the $SPECLOG_DIR every morning
+Changes in the following files :
+bin/sos_apostart : disabled the ssh agent
+bin/sos_runnerd.py : disabled doBookKeeping
 
+
+v5_8_0 (2015-06-12) 
 == New extraction algorithm by Julien Guy ==
 
 For details, see notes on the new extraction on 
